--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>The New Age Of Ayurveda India</title>
       <style> body {padding: 0; margin: 0;} </style>
-      <script src="HomePage.html"></script>
-      <script src="New-Age-of-Ayurveda.html"></script>
-      <script src="Benefits of Modern Ayurveda.html"></script>
-      <script src="Ayurveda-Facts.html"></script>
+      <script src="The new age of Ayurveda India/HomePage.html"></script>
+      <script src="The new age of Ayurveda India/New-Age-of-Ayurveda.html"></script>
+      <script src="The new age of Ayurveda India/Benefits of Modern Ayurveda.html"></script>
+      <script src="The new age of Ayurveda India/Ayurveda-Facts.html"></script>
     </head>
     <body>
     </body>
